--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -22,7 +22,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
     <link rel="icon" href="/favicon.png" type="image/png">
+    
     <link href="https://github.com/owenconti" rel="me">
+    <link rel="webmention" href="https://webmention.io/ohseemedia.com/webmention" />
+    <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
   </head>
   <body class="text-base text-dark bg-white border-t-4 border-secondary">
     <div class="w-full max-w-3xl mx-auto px-2">
