--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,9 +1,14 @@
 <h1 class="heading">{{ title }}</h1>
 
-<div class="flex text-sm text-gray-700 mb-8 justify-between">
-  <p class="mb-0">
-    Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }} <a href="/categories#{{ slug }}">{{ title }}</a> {{ /category }}
-  </p>
+<div class="text-sm text-gray-700 mb-8">
+  {{ webmentions url="{current_url}" }}
+    <p class="mb-0">
+      Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/categories#{{ slug }}">{{ title }}</a>{{ /category }}.
+      {{ if mentions | length > 1 }}
+        This post has been mentioned {{mentions | length}} times!
+      {{ /if }}
+    </p>
+  {{ /webmentions }}
 </div>
 
 {{ if video}}
