--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,7 +1,7 @@
 <h1 class="heading">{{ title }}</h1>
 
 <div class="text-sm text-gray-700 mb-8">
-  {{ webmentions url="{current_url}" }}
+  {{ webmentions url="{ current_url }/" }}
     <p class="mb-0">
       Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/categories#{{ slug }}">{{ title }}</a>{{ /category }}.
       {{ if mentions | length > 1 }}
