--- a/resources/views/partials/_footer.antlers.html
+++ b/resources/views/partials/_footer.antlers.html
@@ -6,7 +6,7 @@
     {{ structure:footer }}
       <a
        href="{{ url }}"
-       class="heading text-sm ml-2 hover:underline"
+       class="heading text-sm lowercase ml-2 hover:underline"
       >
        {{ title }}
       </a>
