Add descriptions to bookmarks.

--- a/resources/views/partials/_bookmark.antlers.html
+++ b/resources/views/partials/_bookmark.antlers.html
@@ -1,5 +1,6 @@
-<article class="mb-6 pb-6 border-b border-gray-300">
+<article class="py-4 border-b border-gray-300">
   <h3 class="m-0">
     <a href="{{ bookmark_url }}" class="heading text-primary">{{ title }}</a>
   </h3>
+  <p class="m-0">{{ description }}</p>
 </article>
