--- a/resources/views/partials/_bookmark.antlers.html
+++ b/resources/views/partials/_bookmark.antlers.html
@@ -3,4 +3,5 @@
     <a href="{{ bookmark_url }}" class="heading text-primary">{{ title }}</a>
   </h3>
   <p class="m-0">{{ description }}</p>
+  <a href="{{ bookmark_url }}">{{ bookmark_url }}</a>
 </article>
