fix: Add mobile styles for webmentions.

--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -39,17 +39,4 @@
 
 <hr class="border-t-8 border-grey-400 my-8">
 
-{{ webmentions:count url="{ current_url }/" }}
-  <section class="border border-grey-200 bg-gray-100 rounded mt-8 p-6">
-    <h3 class="m-0">Webmentions</h3>
-    
-    <div class="text-lg mt-4 flex justify-between">
-      <div>❤️ Likes: <strong>{{ type:like or '0' }}</strong></div>
-      <div>📣 Retweets: <strong>{{ type:repost or '0' }}</strong></div>
-      <div>💬 Replies: <strong>{{ type:reply or '0' }}</strong></div>
-      <div>🙊 Mentions: <strong>{{ type:mention or '0' }}</strong></div>
-    </div>
-
-    <div class="mt-4">Enjoyed this post? Have a comment or feedback? <a href="https://twitter.com/intent/tweet/?text=@owenconti%20{{ current_url }}">Let me know on Twitter!</a></div>
-  </section>
-{{ /webmentions:count }}
+{{ partial src="partials/webmentions" }}
