--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -28,10 +28,18 @@
     <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
   </head>
   <body class="text-base text-dark bg-white border-t-4 border-secondary">
-    <div class="w-full max-w-3xl mx-auto px-2">
+    <div class="w-full max-w-5xl mx-auto px-2">
       {{ partial:partials/header }}
-      {{ template_content }}
-      {{ partial:partials/footer }}
+
+      <div class="flex">
+        <div class="w-64 hidden md:block">
+          {{ partial:partials/sidebar }}
+        </div>
+        <div class="md:pl-12 flex-1 max-w-full w-0">
+          {{ template_content }}
+          {{ partial:partials/footer }}
+        </div>
+      </div>
     </div>
 
     <script>
