--- a/resources/views/templates/analytics.antlers.html
+++ b/resources/views/templates/analytics.antlers.html
@@ -1,5 +1,6 @@
 <div class="content">
-  {{ content }}
+  <h1 class="mb-8">{{ title }}</h1>
+  <div>{{ content }}</div>
 </div>
 
 <iframe src="https://app.usefathom.com/share/nophtzsw/ohseemedia.com" class="w-full border-none h-screen"></iframe>
