--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -1,10 +1,37 @@
-<div class="flex-1 mt-1 md:mt-0 text-center md:text-left">
+<div class="hidden md:block flex-1 mt-1 md:mt-2 text-center md:text-left">
   <ul>
    {{ structure:navigation }}
    <li class="inline-block m-0 mx-4 md:ml-0 md:mr-3">
     <a
      href="{{ url }}"
      class="heading text-lg text-secondary lowercase hover:underline hover:text-secondary-lighten"
+    >
+     {{ title }}
+    </a>
+   </li>
+   {{ /structure:navigation }}
+  </ul>
+ </div>
+
+ <div
+  x-data="{ isOpen: false }"
+  @keydown.escape="isOpen = false"
+  @click.away="isOpen = false"
+  class="md:hidden"
+>
+  <button @click="isOpen = !isOpen" class="mr-2 text-gray-600">
+    <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path x-show="isOpen" fill-rule="evenodd" clip-rule="evenodd" d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" style="display: none;"></path>
+      <path x-show="!isOpen" fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"></path>
+    </svg>
+  </button>
+
+  <ul class="text-right right-0 top-0 mt-12 mr-4 bg-white p-2 shadow" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}">
+   {{ structure:navigation }}
+   <li class="block">
+    <a
+     href="{{ url }}"
+     class="block py-2 heading text-secondary lowercase hover:underline hover:text-secondary-lighten"
     >
      {{ title }}
     </a>
