feat: Clean up sidebar content

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -32,7 +32,7 @@
       {{ partial:partials/header }}
 
       <div class="flex">
-        <div class="w-64 hidden md:block">
+        <div class="w-48 lg:w-64 hidden md:block">
           {{ partial:partials/sidebar }}
         </div>
         <div class="md:pl-12 flex-1 max-w-full w-0">
