--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -37,6 +37,6 @@
   </div>
 {{ /if }}
 
-<hr class="border-t-8 border-grey-400 my-8">
+<hr class="border-t-8 border-gray-300 my-8">
 
 {{ partial src="partials/webmentions" }}
