feat: Update statamic to latest beta version, close Add sidebar to single post view which lists other posts from the same category #10

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -28,11 +28,11 @@
     <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
   </head>
   <body class="text-base text-dark bg-white border-t-4 border-secondary">
-    <div class="w-full max-w-5xl mx-auto px-2">
+    <div class="w-full max-w-6xl mx-auto px-2">
       {{ partial:partials/header }}
 
       <div class="flex">
-        <div class="w-48 lg:w-64 hidden md:block">
+        <div class="w-48 lg:w-full lg:max-w-sm hidden md:block">
           {{ partial:partials/sidebar }}
         </div>
         <div class="md:pl-12 flex-1 max-w-full w-0">
