--- a/resources/css/search.css
+++ b/resources/css/search.css
@@ -1,12 +1,3 @@
-.ais-SearchBox-form {
-  @apply flex bg-white border border-gray-300 rounded w-64;
-}
-.ais-SearchBox-input {
-  @apply p-2 flex-1 w-full;
-}
-.ais-SearchBox-submit {
-  display: none;
-}
-.ais-SearchBox-reset {
-  @apply mx-2;
+[type="search"] {
+  outline-offset: 0;
 }
