--- a/resources/views/feed.antlers.html
+++ b/resources/views/feed.antlers.html
@@ -1,2 +1,20 @@
-{{ xml_header }}
-{{ template_content }}
+<rss version="2.0">
+    <channel>
+      <title>Oh See Media</title>
+      <link>{{ "https://ohseemedia.com" | cdata }}</link>
+      <description>Oh See Media articles on Laravel, React, Vue, programming, and devops.</description>
+      <lastBuildDate>{{ collection:posts limit="1" }}{{ date format="r" }}{{ /collection:posts }}</lastBuildDate>
+      <language>en-us</language>
+      <copyright>Copyright {{ current_date format='Y' }}</copyright>
+      <ttl>3600</ttl>
+      {{ collection:posts }}
+      <item>
+          <title>{{ title | cdata }}</title>
+          <link>{{ permalink }}</link>
+          <guid>{{ permalink }}</guid>
+          <pubDate>{{ date format="r" }}</pubDate>
+          <description>{{ excerpt | full_urls | cdata }}</description>
+      </item>
+      {{ /collection:posts }}
+    </channel>
+</rss>
