--- a/resources/views/templates/page.antlers.html
+++ b/resources/views/templates/page.antlers.html
@@ -1,2 +1,4 @@
-<h1>{{ title }}</h1>
-<div>{{ content }}</div>
+<div class="content">
+  <h1 class="mb-8">{{ title }}</h1>
+  <div>{{ content }}</div>
+</div>
