--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -2,7 +2,7 @@
 
 <div class="text-sm text-gray-700 mb-8">
   <p class="mb-0">
-    Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/categories#{{ slug }}">{{ title }}</a>{{ /category }}.
+    Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}">{{ title }}</a>{{ /category }}.
   </p>
 </div>
 
