--- a/resources/views/partials/_search.antlers.html
+++ b/resources/views/partials/_search.antlers.html
@@ -7,8 +7,8 @@
     placeholder="Search..."
   />
   <div x-show="query" class="absolute bg-white shadow rounded w-full max-w-full" style="display: none;">
-    <p x-show="loading" class="py-2 m-0">Loading</p>
-    <p x-show="!loading && !resultsHtml" class="py-2 m-0">No results.</p>
+    <p x-show="loading" class="p-2 m-0">Loading</p>
+    <p x-show="!loading && !resultsHtml" class="p-2 m-0">No results.</p>
     <div x-show="!loading && resultsHtml" x-html="resultsHtml"></div>
   </div>
 </div>
