Move head includes into a blade template. Ensure static cache is reset whenever content changes.

--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -19,10 +19,8 @@
 
     <title>{{ title ?? 'Home' }} | Oh See Media</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="{{ mix src='/css/app.css' }}">
-    <link rel="icon" href="/favicon.png" type="image/png">
-    
+    {{ partial:partials/head }}
+
     <link href="https://github.com/owenconti" rel="me">
     <link rel="webmention" href="https://webmention.io/ohseemedia.com/webmention" />
     <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
