feat: New color on every page

--- a/resources/css/typography.css
+++ b/resources/css/typography.css
@@ -36,7 +36,7 @@ pre code {
 }
 
 blockquote {
-  @apply p-4 my-6 mx-0 text-gray-800 bg-gray-200 border-l-4 border-secondary-lighten;
+  @apply p-4 my-6 mx-0 text-gray-800 bg-gray-200 border-l-4 border-secondary;
 
   p {
     @apply m-0 p-0;
