--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -1,14 +1,14 @@
 <div class="hidden md:block flex-1 mt-1 md:mt-2 text-center md:text-left">
   <ul>
    {{ structure:navigation }}
-   <li class="inline-block m-0 mx-4 md:ml-0 md:mr-3">
-    <a
-     href="{{ url }}"
-     class="heading text-lg text-secondary lowercase hover:underline"
-    >
-     {{ title }}
-    </a>
-   </li>
+    <li class="inline-block m-0 mx-4 md:ml-0 md:mr-3">
+      <a
+      href="{{ url }}"
+      class="heading text-lg text-accent lowercase hover:underline"
+      >
+      {{ title }}
+      </a>
+    </li>
    {{ /structure:navigation }}
   </ul>
  </div>
@@ -31,7 +31,7 @@
    <li class="block">
     <a
      href="{{ url }}"
-     class="block py-2 heading text-secondary lowercase hover:underline"
+     class="block py-2 heading text-accent lowercase hover:underline"
     >
      {{ title }}
     </a>
