--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,7 +1,7 @@
-<article class="mb-6 pb-6 border-b border-gray-300">
-  <h3 class="m-0">
-    <a href="{{ url }}" class="heading text-primary">{{ title }}</a>
-  </h3>
+<article class="mb-6 pb-6 border-b border-gray-300 last:border-0">
+  <h2 class="m-0">
+    <a href="{{ url }}" class="heading text-dark">{{ title }}</a>
+  </h2>
   <div class="text-sm text-gray-700">
     <p class="mb-2">
       <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
