--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -25,25 +25,22 @@
     <link rel="webmention" href="https://webmention.io/ohseemedia.com/webmention" />
     <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
   </head>
-  <body class="text-base text-dark bg-white border-t-4 border-secondary">
-    <div class="w-full max-w-6xl mx-auto px-2">
+  <body class="text-base text-dark bg-white border-t-4 border-accent">
+    <div class="w-full max-w-6xl mx-auto px-6">
       {{ partial:partials/header }}
 
-      <div class="flex">
-        <div class="w-48 lg:w-full lg:max-w-xs hidden md:block">
+      <div class="flex mt-6">
+        <div class="w-72 lg:w-full lg:max-w-sm hidden md:block">
           {{ partial:partials/sidebar }}
         </div>
         <div class="md:pl-12 flex-1 max-w-full w-0">
           {{ template_content }}
-          {{ partial:partials/footer }}
         </div>
       </div>
+
+      {{ partial:partials/footer }}
     </div>
 
-    <script>
-      window.algoliaAppId = "{{ config:algolia:app_id }}";
-      window.algoliaApiKey = "{{ config:algolia:app_key }}";
-    </script>
     <script async src="{{ mix src='/js/app.js' }}"></script>
 
     {{ if environment === 'production' }}
