--- a/resources/views/category/show.antlers.html
+++ b/resources/views/category/show.antlers.html
@@ -1,4 +1,4 @@
-<h3 class="mb-4 mt-0 font-normal text-gray-600 lowercase" id="{{ slug }}">{{ title }}</h3>
+<h3 class="mb-4 mt-0 text-gray-400" id="{{ slug }}">{{ title }}</h3>
 
 <div>
   {{ entries sort="date:desc" }}
