--- a/resources/views/partials/_webmentions.antlers.html
+++ b/resources/views/partials/_webmentions.antlers.html
@@ -1,6 +1,6 @@
 {{ webmentions:count url="{ current_url }/" }}
-  <section class="border border-grey-200 bg-gray-100 rounded mt-8 p-6">
-    <h3 class="m-0">Webmentions</h3>
+  <section class="mt-8">
+    <p class="mt-4 mb-0">Enjoyed this post? Have a comment or feedback? <a href="https://twitter.com/intent/tweet/?text=@owenconti%20{{ current_url }}">Let me know on Twitter!</a> Or if you found an issue, <a href="https://github.com/ohseemedia/ohseemedia.com/edit/master/content/collections/posts/{{ date | format:Y-m-d }}.{{ slug }}.md">submit a pull request!</a></p>
     
     <div class="text-lg mt-4 md:flex md:justify-between">
       <div class="mb-2 md:mb-0">❤️ Likes: <strong>{{ type:like or '0' }}</strong></div>
@@ -9,6 +9,5 @@
       <div>🙊 Mentions: <strong>{{ type:mention or '0' }}</strong></div>
     </div>
 
-    <div class="mt-4">Enjoyed this post? Have a comment or feedback? <a href="https://twitter.com/intent/tweet/?text=@owenconti%20{{ current_url }}">Let me know on Twitter!</a></div>
   </section>
 {{ /webmentions:count }}
