--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,18 +1,18 @@
-<h1 class="heading">{{ title }}</h1>
+<h1 class="heading highlight-heading">{{ title }}</h1>
 
 <div class="text-sm text-gray-700 mb-8">
-  <p class="mb-0">
+  <p class="mt-2 mb-0">
     Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}">{{ title }}</a>{{ /category }}.
   </p>
 </div>
 
 {{ if video}}
-  <a href="#video" class="block font-normal hover:no-underline border-blue-400 bg-blue-200 text-blue-800 border border-blue-300 rounded mb-10 p-4">
-    📺 Click here to skip to the video attached to this post 👇
+  <a href="#video" class="block text-center font-semibold text-accent mb-10 p-4">
+    📺&nbsp;&nbsp;Click here to skip to the video attached to this post&nbsp;&nbsp;👇
   </a>
 {{ /if }}
 
-<div class="content text-gray-800">
+<div class="prose prose-accent">
   {{ content }}
     {{ if type == "text" }}
       {{ text | noparse }}
@@ -21,8 +21,8 @@
     {{ elseif type == "gist_content" }}
       {{ partial src="partials/gist_content" }}
     {{ elseif type == "example" }}
-      <div class="p-4 pt-3 mb-4 border border-gray-300 bg-white rounded shadow-inner">
-        <h4 class="text-gray-400 m-0 mb-4">Example</h4>
+      <div class="example">
+        <h4>Example</h4>
         <div>
           {{ example_content }}
         </div>
