fix: Replace instances of Oh See Media with Owen Conti

--- a/resources/views/feed.antlers.html
+++ b/resources/views/feed.antlers.html
@@ -1,8 +1,8 @@
 <rss version="2.0">
     <channel>
-      <title>Oh See Media</title>
-      <link>{{ "https://ohseemedia.com" | cdata }}</link>
-      <description>Oh See Media articles on Laravel, React, Vue, programming, and devops.</description>
+      <title>Owen Conti</title>
+      <link>{{ "https://owenconti.com" | cdata }}</link>
+      <description>Owen Conti's blog with articles on Laravel, React, Vue, programming, and devops.</description>
       <lastBuildDate>{{ collection:posts limit="1" }}{{ date format="r" }}{{ /collection:posts }}</lastBuildDate>
       <language>en-us</language>
       <copyright>Copyright {{ current_date format='Y' }}</copyright>
