--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -9,21 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}" />
     
-    <meta property="og:site_name" content="Oh See Media">
+    <meta property="og:site_name" content="Owen Conti">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="{{ title ?? "Oh See Media" }}">
+    <meta property="og:title" content="{{ title ?? "Owen Conti" }}">
     <meta property="og:description" content="{{ excerpt ?? "Web programming articles including tips, tricks, and tutorials on Laravel, PHP, React, Vue, MySQL and more." }}">
     <meta property="og:url" content="{{ current_url }}">
-    <meta property="og:image" content="{{ config:app:url }}/images/ohseemedia-square.png">
-    <meta property="twitter:image" content="{{ config:app:url }}/images/ohseemedia-square.png">
+    <meta property="og:image" content="{{ config:app:url }}/images/owenconti-square.png">
+    <meta property="twitter:image" content="{{ config:app:url }}/images/owenconti-square.png">
 
-    <title>{{ title ?? 'Home' }} | Oh See Media</title>
+    <title>{{ title ?? 'Home' }} | Owen Conti</title>
 
     {{ partial:partials/head }}
 
     <link href="https://github.com/owenconti" rel="me">
-    <link rel="webmention" href="https://webmention.io/ohseemedia.com/webmention" />
-    <link rel="pingback" href="https://webmention.io/ohseemedia.com/xmlrpc" />
+    <link rel="webmention" href="https://webmention.io/owenconti.com/webmention" />
+    <link rel="pingback" href="https://webmention.io/owenconti.com/xmlrpc" />
   </head>
   <body class="text-base text-dark bg-white border-t-4 border-accent">
     <div class="w-full max-w-6xl mx-auto px-6">
