--- a/resources/views/partials/_footer.antlers.html
+++ b/resources/views/partials/_footer.antlers.html
@@ -1,7 +1,7 @@
 <footer class="border-t-4 border-accent pt-8 pb-2 mt-8">
-  <nav class="text-center">
+  <nav class="text-center space-x-4 md:spacing-x-8">
     {{ structure:navigation }}
-      <a href="{{ url }}" class="mx-4 heading text-xl text-gray-500 hover:text-gray-700">
+      <a href="{{ url }}" class="heading text-xl text-gray-500 hover:text-gray-700">
         {{ title }}
       </a>
     {{ /structure:navigation }}
