--- a/resources/views/partials/_search.antlers.html
+++ b/resources/views/partials/_search.antlers.html
@@ -2,7 +2,7 @@
   <input
     type="search"
     name="q"
-    class="bg-white border border-gray-400 focus:border-gray-600 py-2 px-3 rounded w-full"
+    class="input w-full"
     placeholder="Search..."
   />
   <button type="submit" class="text-gray-600 hover:text-gray-800 h-5 w-5 -ml-8">
