feat: Misc style updates

--- a/resources/views/partials/_bookmark.antlers.html
+++ b/resources/views/partials/_bookmark.antlers.html
@@ -1,7 +1,5 @@
 <article class="py-4 border-b border-gray-300">
-  <h3 class="m-0">
-    <a href="{{ bookmark_url }}" class="heading text-dark">{{ title }}</a>
-  </h3>
-  <p class="m-0">{{ description }}</p>
+  <a href="{{ bookmark_url }}" class="heading text-lg">{{ title }}</a>
+  <p class="mt-0">{{ description }}</p>
   <a href="{{ bookmark_url }}">{{ bookmark_url }}</a>
 </article>
