--- a/resources/views/templates/bookmarks.antlers.html
+++ b/resources/views/templates/bookmarks.antlers.html
@@ -1,4 +1,4 @@
-<h1>Bookmarks</h1>
+<h1 class="heading highlight-heading">Bookmarks</h1>
 
 <div class="mt-4">
   {{ collection:bookmarks limit="500" sort="title:asc" as="bookmarks" }}
