fix: Fix bookmarks styles

--- a/resources/views/partials/_bookmark.antlers.html
+++ b/resources/views/partials/_bookmark.antlers.html
@@ -1,5 +1,5 @@
 <article class="py-4 border-b border-gray-300">
-  <a href="{{ bookmark_url }}" class="heading text-lg">{{ title }}</a>
-  <p class="mt-0">{{ description }}</p>
-  <a href="{{ bookmark_url }}">{{ bookmark_url }}</a>
+  <h3>{{ title }}</h3>
+  <div>{{ description }}</div>
+  <a href="{{ bookmark_url }}" class="block mt-1">{{ bookmark_url }}</a>
 </article>
