--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,4 +1,4 @@
-<article class="mb-6 pb-4 border-b border-gray-200 last:border-0">
+<article class="mb-6 pb-4 border-b-2 border-gray-300 last:border-0">
   <a href="{{ url }}" class="text-2xl heading highlight-heading">{{ title }}</a>
   <p class="mt-3 mb-2 text-sm text-gray-600">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
