--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -4,7 +4,7 @@
     <title>{{ title ?? 'Home' }} | Owen Conti</title>
     {{ partial:partials/head }}
   </head>
-  <body class="text-base text-dark bg-white border-t-4 border-accent">
+  <body class="text-base text-dark bg-white dark:bg-dark dark:text-light border-t-4 border-accent">
     <div class="w-full max-w-6xl mx-auto px-6">
       {{ partial:partials/header }}
 
