--- a/resources/views/partials/_sidebar.antlers.html
+++ b/resources/views/partials/_sidebar.antlers.html
@@ -11,7 +11,7 @@
             {{ /if }}
           {{ /entries }}
 
-          <a href="/category/{{ slug }}" class="py-2 text-lg text-center border-2 border-accent rounded-md bg-white text-accent heading block w-full hover:text-white hover:bg-accent">View all {{ title }} posts</a>
+          <a href="/category/{{ slug }}" class="text-lg text-center block w-full accent-button">View all {{ title }} posts</a>
         </div>
       {{ /if }}
     {{ /category }}
@@ -29,7 +29,7 @@
 
   <div class="mt-6 pt-6 border-t-4 border-gray-300">
     <h3 class="mb-2">Newsletter</h3>
-    <p class="mb-2 text-gray-600 text-sm">Subscribe to my newsletter to receive infrequent updates on content I've published.</p>
+    <p class="mb-2 text-gray-600 dark:text-gray-400 text-sm">Subscribe to my newsletter to receive infrequent updates on content I've published.</p>
     <div class="newsletter-form"></div>
   </div>
 
