--- a/resources/css/button.css
+++ b/resources/css/button.css
@@ -1,3 +1,3 @@
 .accent-button {
-  @apply py-2 px-4 rounded-md border-2 border-accent heading bg-white text-accent inline-flex items-center hover:bg-accent hover:text-white focus:outline-none focus:bg-accent focus:text-white;
+  @apply py-2 px-4 rounded-md border-2 border-accent heading bg-none text-accent inline-flex items-center hover:bg-accent hover:text-white focus:outline-none focus:bg-accent focus:text-white;
 }
