--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -1,5 +1,5 @@
 <div
-  class="relative bg-white"
+  class="relative"
   x-data="{ isOpen: false }"
   @keydown.escape="isOpen = false"
   @click.away="isOpen = false"
@@ -14,7 +14,7 @@
     </div>
 
     <div class="-mr-2 -my-2 md:hidden">
-      <button @click="isOpen = !isOpen" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+      <button @click="isOpen = !isOpen" type="button" class="bg-white dark:bg-dark rounded-md p-2 inline-flex items-center justify-center text-gray-400 dark:text-gray-400 hover:text-gray-500 dark:hover:text-gray-200 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
         <span class="sr-only">Open menu</span>
         <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
@@ -24,7 +24,7 @@
 
     <nav class="hidden md:flex space-x-6">
       {{ structure:navigation }}
-        <a href="{{ url }}" class="font-normal text-gray-600 hover:text-gray-900">
+        <a href="{{ url }}" class="font-normal text-gray-600 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
           {{ title }}
         </a>
       {{ /structure:navigation }}
@@ -32,10 +32,10 @@
   </div>
 
   <div x-cloak class="top-0 inset-x-0 z-10 mt-6 transition transform origin-top-right md:hidden" :class="{ 'absolute' : isOpen , 'hidden' : !isOpen}" >
-    <div class="relative rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
+    <div class="relative rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-dark divide-y-2 divide-gray-50">
       <div class="pt-5 pb-6 px-5">
         <div class="absolute top-0 right-0 mr-3 mt-3">
-          <button  @click="isOpen = !isOpen" type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
+          <button  @click="isOpen = !isOpen" type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-dark-lighten focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
             <span class="sr-only">Close menu</span>
             <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
@@ -45,7 +45,7 @@
 
         <nav class="grid gap-6">
           {{ structure:navigation }}
-            <a href="{{ url }}" class="text-base font-medium text-gray-600 hover:text-gray-900">
+            <a href="{{ url }}" class="text-base font-medium text-gray-600 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-500">
               {{ title }}
             </a>
           {{ /structure:navigation }}
