--- a/resources/views/partials/_nav.antlers.html
+++ b/resources/views/partials/_nav.antlers.html
@@ -19,7 +19,7 @@
   @click.away="isOpen = false"
   class="md:hidden"
 >
-  <button @click="isOpen = !isOpen" class="mr-2 text-gray-600">
+  <button @click="isOpen = !isOpen" class="mr-2 text-gray-600 dark:text-gray-400">
     <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
       <path x-show="isOpen" fill-rule="evenodd" clip-rule="evenodd" d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z" style="display: none;"></path>
       <path x-show="!isOpen" fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"></path>
