--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -1,6 +1,6 @@
 <h1 class="heading highlight-heading">{{ title }}</h1>
 
-<div class="text-sm text-gray-700 mb-8">
+<div class="text-sm text-gray-700 dark:text-gray-400 mb-8">
   <p class="mt-2 mb-0">
     Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}">{{ title }}</a>{{ /category }}.
   </p>
