fix: Fix empty space on footer nav items

--- a/resources/views/partials/_footer.antlers.html
+++ b/resources/views/partials/_footer.antlers.html
@@ -1,9 +1,7 @@
 <footer class="border-t-4 border-accent pt-8 pb-2 mt-8">
   <nav class="text-center space-x-4 md:spacing-x-8">
     {{ structure:navigation }}
-      <a href="{{ url }}" class="heading text-xl text-gray-500 hover:text-gray-600 dark:text-gray-300 dark:hover:text-gray-500 ">
-        {{ title }}
-      </a>
+      <a href="{{ url }}" class="heading text-xl text-gray-500 hover:text-gray-600 dark:text-gray-300 dark:hover:text-gray-500">{{ title }}</a>
     {{ /structure:navigation }}
   </nav>
 
