fix: Lighthouse accessibility and performance fixes

--- a/resources/views/empty.antlers.html
+++ b/resources/views/empty.antlers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site_short_locale }}" class="font-sans text-dark">
+<html lang="en" class="font-sans text-dark">
   <head>
     <title>{{ title ?? 'Home' }} | Owen Conti</title>
     {{ partial:partials/head }}
