--- a/resources/views/partials/_header.antlers.html
+++ b/resources/views/partials/_header.antlers.html
@@ -8,7 +8,7 @@
     class="flex justify-between items-center py-6 md:justify-between md:space-x-10"
   >
     <div>
-      <a href="/" class="flex">
+      <a href="/" class="flex" aria-label="Owen Conti">
         {{ partial:partials/logo }}
       </a>
     </div>
