--- a/resources/views/templates/search.antlers.html
+++ b/resources/views/templates/search.antlers.html
@@ -1,5 +1,6 @@
 <div id="search-results"></div>
 
+<script async src="{{ mix src='/js/search-results.js' }}"></script>
 <script>
   window.algoliaAppId = "{{ config:algolia:app_id }}";
   window.algoliaApiKey = "{{ config:algolia:app_key }}";
