--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -1,8 +1,10 @@
 <article class="mb-6 pb-4">
   <a href="{{ url }}" class="text-xl heading highlight-heading">{{ title }}</a>
-  <p class="mt-3 mb-2 text-sm text-gray-600 dark:text-gray-400">
+
+  <p class="mt-3 mb-2 text-sm text-gray-700 dark:text-gray-300">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-    under {{ category }}<a href="/category/{{ slug }}">{{ title }}</a>{{ /category }}
+    under {{ category }}<a href="/category/{{ slug }}" class="font-bold">{{ title }}</a>{{ /category }}
   </p>
+
   <p class="m-0">{{ excerpt }}</p>
 </article>
