--- a/resources/views/templates/post.antlers.html
+++ b/resources/views/templates/post.antlers.html
@@ -2,7 +2,7 @@
 
 <div class="text-sm text-gray-700 dark:text-gray-400 mb-8">
   <p class="mt-2 mb-0">
-    Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}" class="font-bold">{{ title }}</a>{{ /category }}.
+    Published <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time> under {{ category }}<a href="/category/{{ slug }}" class="text-gray-700 dark:text-gray-300 font-bold">{{ title }}</a>{{ /category }}.
   </p>
 </div>
 
