--- a/resources/views/partials/_summary.antlers.html
+++ b/resources/views/partials/_summary.antlers.html
@@ -3,7 +3,7 @@
 
   <p class="mt-3 mb-2 text-sm text-gray-700 dark:text-gray-300">
     <time datetime="{{ date | format:Y-m-d }}">{{ date }}</time>
-    under {{ category }}<a href="/category/{{ slug }}" class="font-bold">{{ title }}</a>{{ /category }}
+    under {{ category }}<a href="/category/{{ slug }}" class="text-gray-700 dark:text-gray-300 font-bold">{{ title }}</a>{{ /category }}
   </p>
 
   <p class="m-0">{{ excerpt }}</p>
