--- a/resources/views/templates/home.antlers.html
+++ b/resources/views/templates/home.antlers.html
@@ -9,6 +9,6 @@
 
     <div>
       <p><strong>Looking for more?</strong></p>
-      <p>You can view the entire post list on the <a href="/categories">Categories</a> page.</p>
+      <p>You can view the entire post list on the <a href="/category">blog</a> page.</p>
     </div>
 {{ /collection:posts }}
