fix: Fix contrast for read more link

--- a/resources/views/errors/404.antlers.html
+++ b/resources/views/errors/404.antlers.html
@@ -16,6 +16,6 @@
 
     <div>
       <p><strong>Looking for more?</strong></p>
-      <p>You can view the entire post list on the <a href="/categories">Categories</a> page.</p>
+      <p>You can view the entire post list on the <a href="/category" class="text-gray-700 dark:text-gray-300">blog</a> page.</p>
     </div>
 {{ /collection:posts }}
